--- a/Medical/coba.html
+++ b/Medical/coba.html
@@ -99,8 +99,14 @@
                             <td></td>
                         </tr>
                         <tr></tr><tr></tr>
+                        <tr class="image">
+                            <td colspan="2"><img src="/Medical/img/paru-paru.png" alt="Gambar wa"></td>
+                        </tr>
                         <tr>
-                            <td colspan="2"><img src="/Medical/img/paru-paru.png" alt=""></td>
+                            <td colspan="3" class="tinggi8">Sputum exam</td>
+                        </tr>
+                        <tr>
+                            <td class="tinggi8" colspan="3">Electrocardigagram exam</td>
                         </tr>
                     </tbody>
                 </table>
@@ -153,19 +159,62 @@
                         <tr></tr>
                         <tr>
                             <td rowspan="9" class="tinggi5">Hepatic fucntion exam</td>
-                            <td colspan="2" rowspan="3">GOT Gluetamic </td>
+                            <td colspan="2" rowspan="3">GOT Gluetamic oxaloacetic transaminase</td>
                         </tr>
                         <tr></tr><tr></tr>
                         <tr>
-                            <td colspan="2" rowspan="3" >Triglyciride</td>
+                            <td colspan="2" rowspan="3" >GPT Gluematic pyruvic transaminase</td>
                         </tr>
                         <tr></tr><tr></tr>
                         <tr>
-                            <td colspan="2" rowspan="3">HDL cholestrol</td>
+                            <td colspan="2" rowspan="3">GPT <br>glutanyl <br>transpiptidase</td>
+                        </tr>
+                        <tr></tr><tr></tr>
+                        <tr>
+                            <td rowspan="2">Medical history</td>
+                            <td colspan="2" class="tinggi7"></td>
+                        </tr><tr></tr>
+                        <tr>
+                            <td rowspan="2">Medical history of family</td>
+                            <td colspan="2" class="tinggi7"></td>
+                        </tr><tr></tr>
+                        <tr>
+                            <td rowspan="5">introction (fit or unfit for lookinh out duties, limination for service at sea rtc) by doctor</td>
+                            <td colspan="2" class="tinggi"></td>
+                        </tr><tr></tr>
+                        <tr></tr><tr></tr>
+                        <tr></tr>
+                        <tr>
+                            <td rowspan="2">remark</td>
+                            <td colspan="2" class="tinggi7"></td>
+                        </tr>
+                        <tr></tr>
+                        <tr>
+                            <td>Diagnosis</td>
+                            <td colspan="2"> fit     unfit</td>
+                        </tr>
+                        <tr>
+                            <td>Date of Diagnosis</td>
+                            <td colspan="2" class="lebar"></td>
+                        </tr>
+                        <tr>
+                            <td>Expiry Date (1 year from Diagnosis)</td>
+                            <td colspan="2" class="lebar"></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
+            <table border="1" class="table3">
+                <tr>
+                    <td>signature of holder of this certificate</td>
+                </tr>
+                <tr>
+                    <td>signature of doctor, addres and stamp of the hospital</td>
+                </tr>
+                <tr>
+                    <td>write name and date in clear block style</td>
+                </tr>
+            </table>
         </div>
     </div>
     <!-- <!— Optional JavaScript —> -->
