--- a/Medical/coba.html
+++ b/Medical/coba.html
@@ -89,7 +89,7 @@
                         </tr>
                         <tr>
                             <td rowspan="9">Cheast X-ray exam</td>
-                            <td >Date of photographing :</td>
+                            <td width="550px">Date of photographing :</td>
                             <td class="lebar"></td>
                         </tr>
                         <tr></tr><tr></tr>
@@ -179,14 +179,14 @@
                             <td colspan="2" class="tinggi7"></td>
                         </tr><tr></tr>
                         <tr>
-                            <td rowspan="5">introction (fit or unfit for lookinh out duties, limination for service at sea rtc) by doctor</td>
-                            <td colspan="2" class="tinggi"></td>
+                            <td rowspan="5" class="tinggi4">introction (fit or unfit for lookinh out duties, limination for service at sea rtc) by doctor</td>
+                            <td colspan="2" class="tinggi4"></td>
                         </tr><tr></tr>
                         <tr></tr><tr></tr>
                         <tr></tr>
                         <tr>
                             <td rowspan="2">remark</td>
-                            <td colspan="2" class="tinggi7"></td>
+                            <td colspan="2" class="tinggi"></td>
                         </tr>
                         <tr></tr>
                         <tr>
@@ -194,11 +194,11 @@
                             <td colspan="2"> fit     unfit</td>
                         </tr>
                         <tr>
-                            <td>Date of Diagnosis</td>
+                            <td class="tinggi7">Date of Diagnosis</td>
                             <td colspan="2" class="lebar"></td>
                         </tr>
                         <tr>
-                            <td>Expiry Date (1 year from Diagnosis)</td>
+                            <td class="tinggi7">Expiry Date (1 year from Diagnosis)</td>
                             <td colspan="2" class="lebar"></td>
                         </tr>
                     </tbody>
